[gd_scene load_steps=3 format=2]

[ext_resource path="res://controller/ui/controller_ui.gd" type="Script" id=1]
[ext_resource path="res://controller/joystick/joystick.tscn" type="PackedScene" id=2]

[node name="ControllerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="MovementJoystick" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = -148.0
margin_right = 148.0
margin_bottom = -148.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="CameraJoystick" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -148.0
margin_right = -148.0
margin_bottom = -148.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="JumpButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -323.0
margin_top = -299.0
margin_right = -228.0
margin_bottom = -218.0
text = "Jump"

[connection signal="pressed" from="JumpButton" to="." method="_on_JumpButton_pressed"]
